<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/SferaEduAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/color"
            app:title="@string/profile_owner_id">

            <View
                android:id="@+id/icon_social"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:layout_marginEnd="3dp"
                android:background="@drawable/icon_social"/>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_grey"
            tools:context=".MainActivity">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image"
                android:layout_width="160dp"
                android:layout_height="160dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/circleImageView"
                android:src="@drawable/main_avatar"
                />

            <View
                android:id="@+id/elevation"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layout_constraintStart_toStartOf="@id/image"
                app:layout_constraintBottom_toBottomOf="@id/image"
                android:background="@drawable/elevation"
                />
            <TextView
                android:id="@+id/some_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/elevation"
                app:layout_constraintBottom_toBottomOf="@id/elevation"
                app:layout_constraintStart_toStartOf="@id/elevation"
                app:layout_constraintEnd_toEndOf="@id/elevation"
                style="@style/h5"
                android:textColor="@color/white"
                android:text="@string/profile_avatar_rating"
                android:gravity="center_horizontal|top"
                />

            <TextView
                android:id="@+id/profile_owner_name"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                style="@style/h6"
                android:text="@string/profile_owner_name"
                app:layout_constraintTop_toBottomOf="@id/image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white"
                android:layout_marginTop="12dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_language"
                app:layout_constraintTop_toTopOf="@id/tv_owner_languages"
                app:layout_constraintBottom_toBottomOf="@id/tv_owner_languages"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_owner_languages"
                />

            <TextView
                android:id="@+id/tv_owner_languages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subtitle_1"
                android:text="@string/owner_languages"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="56dp"
                app:layout_constraintTop_toBottomOf="@id/profile_owner_name"
                android:layout_marginTop="24dp"/>

            <TextView
                android:id="@+id/tv_owner_languages_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subtitle_1"
                android:text="@string/choose"
                android:textColor="@color/purple"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_owner_languages"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_place"
                app:layout_constraintTop_toTopOf="@id/tv_owner_geo"
                app:layout_constraintBottom_toBottomOf="@id/tv_owner_geo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_owner_geo"
                />

            <TextView
                android:id="@+id/tv_owner_geo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subtitle_1"
                android:text="@string/owner_geo"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="56dp"
                app:layout_constraintTop_toBottomOf="@id/tv_owner_languages"
                android:layout_marginTop="24dp"/>

            <TextView
                android:id="@+id/tv_owner_geo_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subtitle_1"
                android:text="@string/choose"
                android:textColor="@color/purple"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_owner_geo"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_profile_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                app:layout_constraintTop_toBottomOf="@id/tv_owner_geo"
                android:layout_marginTop="18dp"
                tools:itemCount="4"
                tools:listitem="@layout/first_row_photo_layout"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4"
                android:orientation="vertical"/>

            <Button
                android:id="@+id/btn_questionnaires"
                style="@style/button"
                app:shapeAppearanceOverlay="@style/RoundedCorner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rv_profile_photos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_people"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="@string/questionnaires"
                />

                <Button
                android:id="@+id/btn_people"
                style="@style/button"
                app:shapeAppearanceOverlay="@style/RoundedCorner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rv_profile_photos"
                app:layout_constraintStart_toEndOf="@id/btn_questionnaires"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/people"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btn_questionnaires"
                android:hint="@string/about_me"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:counterEnabled="true"
                app:counterMaxLength="300">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_grey"
                    android:text="@string/something_interesting_about_me_nin_two_lines"
                    android:textColor="@color/white"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:maxLength="300"
                    />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sw_dream_n_get"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/filledTextField"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/dream_and_get"
                app:trackTint="@color/grey"
                app:thumbTint="@color/purple"/>

            <Button
                android:id="@+id/btn_wishes"
                style="@style/button"
                app:shapeAppearanceOverlay="@style/RoundedCorner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/sw_dream_n_get"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/wishes" />

            <TextView
                android:id="@+id/tv_moments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subtitle_1"
                android:text="@string/moments"
                android:textColor="@color/purple"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/btn_wishes"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_moments"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_moments"
                tools:listitem="@layout/moments_item_layout" />

            <TextView
                android:id="@+id/tv_chronicles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subtitle_1"
                android:text="@string/chronicles"
                android:textColor="@color/purple"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/rv_moments"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_chronicles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_chronicles"
                tools:listitem="@layout/chronicles_item_layout"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                app:layout_constraintDimensionRatio="1:1"
                android:clipToPadding="false"
                tools:itemCount="9"
                android:orientation="vertical"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>

