<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.sb066coder.sferaedu.view.ProfileOwnerFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/SferaEduAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/color"
            app:title="@string/profile_owner_id">

            <View
                android:id="@+id/icon_social"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:layout_marginEnd="3dp"
                android:background="@drawable/icon_social"/>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#121212"
            tools:context=".MainActivity">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@drawable/main_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/circleImageView" />

            <View
                android:id="@+id/elevation"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/elevation"
                app:layout_constraintBottom_toBottomOf="@id/image"
                app:layout_constraintStart_toStartOf="@id/image" />

            <TextView
                android:id="@+id/some_id"
                style="@style/h5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|top"
                android:text="@string/profile_avatar_rating"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/elevation"
                app:layout_constraintEnd_toEndOf="@id/elevation"
                app:layout_constraintStart_toStartOf="@id/elevation"
                app:layout_constraintTop_toTopOf="@id/elevation" />

            <TextView
                android:id="@+id/profile_owner_name"
                style="@style/h6"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginTop="12dp"
                android:text="@string/profile_owner_name"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_language"
                app:layout_constraintBottom_toBottomOf="@id/tv_owner_languages"
                app:layout_constraintEnd_toStartOf="@id/tv_owner_languages"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_owner_languages" />

            <TextView
                android:id="@+id/tv_owner_languages"
                style="@style/subtitle_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="24dp"
                android:text="@string/owner_languages"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_owner_name" />

            <TextView
                android:id="@+id/tv_owner_languages_choose"
                style="@style/subtitle_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/choose"
                android:textColor="@color/purple"
                app:layout_constraintBottom_toBottomOf="@id/tv_owner_languages"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_place"
                app:layout_constraintBottom_toBottomOf="@id/tv_owner_geo"
                app:layout_constraintEnd_toStartOf="@id/tv_owner_geo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_owner_geo" />

            <TextView
                android:id="@+id/tv_owner_geo"
                style="@style/subtitle_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="24dp"
                android:text="@string/owner_geo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_owner_languages" />

            <TextView
                android:id="@+id/tv_owner_geo_choose"
                style="@style/subtitle_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/choose"
                android:textColor="@color/purple"
                app:layout_constraintBottom_toBottomOf="@id/tv_owner_geo"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_profile_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="14dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_owner_geo"
                app:spanCount="4"
                tools:itemCount="4"
                tools:listitem="@layout/first_row_photo_layout" />

            <Button
                android:id="@+id/btn_questionnaires"
                style="@style/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="@string/questionnaires"
                app:layout_constraintEnd_toStartOf="@id/btn_people"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_profile_photos"
                app:shapeAppearanceOverlay="@style/RoundedCorner" />

            <Button
                android:id="@+id/btn_people"
                style="@style/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/people"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_questionnaires"
                app:layout_constraintTop_toBottomOf="@id/rv_profile_photos"
                app:shapeAppearanceOverlay="@style/RoundedCorner" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextField"
                style="purpleTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/about_me"
                app:counterEnabled="true"
                app:counterMaxLength="300"
                app:layout_constraintTop_toBottomOf="@id/btn_questionnaires"
                tools:layout_editor_absoluteX="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    style="purpleTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_grey"
                    android:maxLength="300"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@string/something_interesting_about_me_nin_two_lines"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_dream_n_get"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:checked="false"
                android:text="@string/dream_and_get"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/filledTextField"
                app:thumbTint="@color/purple"
                app:trackTint="@color/grey"
                tools:layout_editor_absoluteX="16dp" />


            <Button
                android:id="@+id/btn_wishes"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/wishes"
                app:layout_constraintTop_toBottomOf="@id/sw_dream_n_get"
                app:shapeAppearanceOverlay="@style/RoundedCorner" />

            <TextView
                android:id="@+id/tv_moments"
                style="@style/subtitle_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/moments"
                android:textColor="@color/purple"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_wishes" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_moments"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_moments"
                tools:listitem="@layout/moments_item_layout" />

            <TextView
                android:id="@+id/tv_chronicles"
                style="@style/subtitle_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/chronicles"
                android:textColor="@color/purple"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_moments" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_chronicles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="8dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toBottomOf="@id/tv_chronicles"
                app:spanCount="3"
                tools:itemCount="9"
                tools:listitem="@layout/chronicles_item_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>